# transcriber

./: .gitignore  LICENSE  README.md  app.py  huggingface-download.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-tests.yml
src/whispaau/: __init__.py  cli_utils.py  file_preprocessor.py  logging.py  transcription.py  utils.py  writers.py
tests/: run_test_suite.sh  test_cli_arguments.py  test_cli_utils.py  test_csv_writer.py  test_end2end_output_file_structure.py  test_end2end_output_verify_content.py  test_logging.py  test_speaker_grouping.py  test_utils.py
tests/application/: test_cli_arguments.py  test_cli_utils.py  test_csv_writer.py  test_logging.py  test_speaker_grouping.py  test_transcription.py  test_utils.py
tests/application/resources/: shorts_missing_speaker_fist_line.json  transcription_with_bad_attribute.json  transcription_with_same_speaker.json
tests/resources/: expected_grouped_speakers.json  expected_output_missing_speaker.csv
tests/resources/end2end/: DIALOGUE_OUTPUT.txt  DIALOGUE_OUTPUT_parakeet-tdt-0.6b-v3.txt  SHORTS_OUTPUT.txt
