[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Transcriber"
version = "1.19"
description = "Customised cli for AI transcription"
authors = [
    {name = "Nikolaj Andersen"},
    {name = "Pelle Rosenbeck Gøeg"},
    {name = "Speechbrain"},
    {name = "OpenAI"},
]
license = {file = "LICENSE"}
urls = {Repository = "https://github.com/aau-claaudia/transcriber/"}
dependencies = [
    "ctranslate2>=4.5.0",
    "faster-whisper>=1.1.1",
    "nltk>=3.9.1",
    "numpy>=2.1.0",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pyannote-audio>=4.0.0",
    "huggingface-hub<1.0.0",
    "torch~=2.8.0",
    "torchaudio~=2.8.0",
    "transformers>=4.48.0",
    "triton>=3.3.0; sys_platform == 'linux' and platform_machine == 'x86_64'", # only install triton on x86_64 Linux
    "whisperx @ git+https://github.com/m-bain/whisperx.git@v3.8.5",
    "openai-whisper @ git+https://github.com/openai/whisper.git@v20250625",
    "ffmpeg-python>=0.2.0",
    "torchcodec~=0.7.0",
    "pyzipper~=0.3.6",
    "python-docx~=1.2.0",
    "nemo-toolkit[asr]~=2.7.2",
    "librosa>=0.10.2",
    "soundfile>=0.13.0",
    "soxr",
    "numba>=0.61.0",
    "pyarrow>=17.0.0",
    "datasets>=3.0.0",
    "ml-dtypes>=0.5.0",
    "onnx>=1.18.0"
]

[tool.setuptools]
py-modules = ["aautrans"]
package-dir = {"" = "src"}
