[metadata]
name = Transcriber
description = Customised cli for AI transcription
version = 1.0
url = https://github.com/aau-claaudia/transcriber/
auther = Pelle Rosenbeck Gøeg, Speechbrain and OpenAI
license_files = LICENSE

[options]
install_requires=lxml
py_modules=['aautrans']
package_dir =
   = src
