[metadata]
name = Transcriber
description = Customised cli for AI transcription
version = 1.17
url = https://github.com/aau-claaudia/transcriber/
auther = Nikolaj Andersen, Pelle Rosenbeck Gøeg, Speechbrain and OpenAI
license_files = LICENSE

[options]
install_requires=lxml
py_modules=['aautrans']
package_dir =
   = src
